<?xml version="1.0"?>
<package format="3">
  <name>ros2_learning_lab</name>
  <version>0.0.1</version>
  <description>ROS2 learning project with topic, service, launch, and parameters.</description>
  <maintainer email="you@example.com">yuyang</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
